@@ -1686,6 +1686,12 @@ stopifnot(identical(Nni, names(as.factor(ni))),
 ## The first one lost names in  3.1.0 <= R <= 3.3.0
 
 
+## strtrim(<empty>, *) should work as substr(<empty>, *) does
+c0 <- character(0)
+stopifnot(identical(c0, strtrim(c0, integer(0))))
+## failed in R <= 3.3.0
+
+
 
 
 ## keep at end
